frontend/src/index.scss
@charset "utf-8";
@import "variables";
@import "~bulma/bulma.sass";
@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');

.Site {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }
  
 .Site-content {
    flex: 1;
  }

  .is-centered-vertically {
    display: flex;
    align-items: center;
  }

  html {
    font-size: 12px;
    @include tablet {
      font-size: 14px;
    }
    @include desktop {
      font-size: 20px;
    }
  }

